--- a/ahb_upgrade/views/partner_view.xml
+++ b/ahb_upgrade/views/partner_view.xml
@@ -5,9 +5,9 @@
 	        <field name="model">res.partner</field>
 	        <field name="inherit_id" ref="res.partner.simplified.form"/>
 	        <field name="arch" type="xml">
-				<xpath expr="//group[@name='mobile']" position="before">
-                        <field name="old_id"/>
-                </xpath>
+				<field name="mobile" position="after">
+                	<field name="old_id" string="V9 ID"/>
+            	</field>
 	        </field>
 	    </record>
     </data>
