--- a/ahb_upgrade/views/partner_view.xml
+++ b/ahb_upgrade/views/partner_view.xml
@@ -3,7 +3,7 @@
     	<record id="view_partner_form_inherit" model="ir.ui.view">
 	        <field name="name">res.partner.simplified.form.inherit</field>
 	        <field name="model">res.partner</field>
-	        <field name="inherit_id" ref="res.partner.simplified.form"/>
+	        <field name="inherit_id" ref="base.view_partner_form"/>
 	        <field name="arch" type="xml">
 				<field name="mobile" position="after">
                 	<field name="old_id" string="V9 ID"/>
