--- a/ahb_upgrade/views/partner_view.xml
+++ b/ahb_upgrade/views/partner_view.xml
@@ -6,7 +6,7 @@
 	        <field name="inherit_id" ref="base.view_partner_form"/>
 	        <field name="arch" type="xml">
 				<field name="mobile" position="after">
-                	<field name="old_id" string="V9 ID"/>
+                	<field id="old_id" name="old_id" placeholder="v9 ID" string="V9 ID"/>
             	</field>
 	        </field>
 	    </record>
