--- a/ahb_upgrade/views/partner_view.xml
+++ b/ahb_upgrade/views/partner_view.xml
@@ -5,9 +5,9 @@
 	        <field name="model">res.partner</field>
 	        <field name="inherit_id" ref="base.view_partner_form"/>
 	        <field name="arch" type="xml">
-				<field name="mobile" position="after">
+				<xpath expr="//field[@name='mobile']" position="after">
                 	<field id="old_id" name="old_id" placeholder="v9 ID" string="V9 ID"/>
-            	</field>
+            	</xpath>
 	        </field>
 	    </record>
     </data>
