--- a/ahb_upgrade/views/partner_view.xml
+++ b/ahb_upgrade/views/partner_view.xml
@@ -5,7 +5,7 @@
 	        <field name="model">res.partner</field>
 	        <field name="inherit_id" ref="base.view_partner_form"/>
 	        <field name="arch" type="xml">
-				<xpath expr="//field[@name='mobile']" position="before">
+				<xpath expr="//group" position="inside">
 					<group>
                 		<field id="old_id" name="old_id" placeholder="v9 ID" string="V9 ID"/>
 					</group>
