--- a/ahb_upgrade/views/partner_view.xml
+++ b/ahb_upgrade/views/partner_view.xml
@@ -7,16 +7,16 @@
 	        <field name="arch" type="xml">
 				<xpath expr="//group" position="inside">
 					<group>
-						<field id="old_id" name="old_id" placeholder="v9 ID" string="V9 ID">
-							<attribute name="attrs">
-    							{'readonly': [('editable', '=', False)]}
-  							</attribute>
-						</field>
-						<field id="imported" name="imported">
-							<attribute name="attrs">
-    							{'readonly': [('editable', '=', False)]}
-  							</attribute>
-						</field>
+						<field
+								id="old_id"
+								name="old_id"
+								placeholder="v9 ID"
+								string="V9 ID"
+								attrs="{'readonly': [('editable', '=', False)]}" />
+						<field
+								id="imported"
+								name="imported"
+								attrs="{'readonly': [('editable', '=', False)]}" />
 					</group>
             	</xpath>
 	        </field>
